    - Fixed a crash when deleting interrupts in multiplayer. Resolves https://github.com/pyanodon/pybugreports/issues/909
    - Fixed a crash when adding schedule to nuclear caravans. Resolves https://github.com/pyanodon/pybugreports/issues/924
---------------------------------------------------------------------------------------------------
Version: 3.0.41
Date: 2025-3-7
  Changes:
    - Made "Open caravan" button in outposts and codex put player in remote view.
    - Reverted the change that made caravan gui close when caravan is out of reach. Resolves https://github.com/pyanodon/pybugreports/issues/900
---------------------------------------------------------------------------------------------------
Version: 3.0.40
Date: 2025-3-4
  Changes:
    - Fixed some caravan actions consuming food multiple times per action. Resolves https://github.com/pyanodon/pybugreports/issues/897
    - Fixed caravan gui not closing when caravan is out of reach.
    - Fixed being able to interact with food slots when caravan is out of reach.
---------------------------------------------------------------------------------------------------
Version: 3.0.39
Date: 2025-3-3
  Changes:
    - Caravan actions now only consume food if items were transferred.
    - Updated codex page for caravans.
    - Fixed being able to store invalid food items using the store specific food action.
    - Fixed possible crashes when deleting interrupts in multiplayer.
    - Fixed interrupts not always triggering when they're supposed to.
    - Fixed being able to add destinations on a different surface.
    - Fixed "Open on map" button not always opening the correct surface.
    - Fixed that caravans did not correctlt check whether an action was valid.
    - Fixed wrong GUI key for the "not at outpost" caravan interrupt condition.
    - Fixed action list gui having incorrect width.
    - Fixed some caravan locale being missing.