@@ -41,6 +41,7 @@ local unit = {
     additional_pastable_entities = {"nukavan", "nukavan-turd"},
     icon = "__pyalienlifegraphics2__/graphics/icons/nuka-van.png",
     icon_size = 64,
+    alert_icon_scale = 1,
     ai_settings = {do_separation = false},
     flags = {"placeable-player", "placeable-off-grid", "not-repairable", "breaths-air", "building-direction-8-way"},
     minable = {mining_time = 0.1, result = "nukavan"},
