@@ -8,6 +8,21 @@ Caravan.action_list_types = {
     interrupt_targets = 4,
 }
 
+---@enum CaravanAlert
+Caravan.alerts = {
+    no_fuel = {
+        signal = {
+            type = "virtual",
+            name = "py-no-food"
+        },
+        message = {"?", {"caravan-warnings.no-food"}, {"virtual-signal-name.no-food"}, {"virtual-signal-name.no-fuel"}}
+    },
+    destination_destroyed = {
+        signal = nil,
+        message = "destination destroyed"
+    },
+}
+
 Caravan.valid_actions = {
     caravan = {
         ["outpost"] = table.invert{
