@@ -9,6 +9,8 @@ Date: ???
     - Fixed caravans incorrectly evaluating some interrupt conditions. Resolves https://github.com/pyanodon/pybugreports/issues/914 and https://github.com/pyanodon/pybugreports/issues/905
     - Fixed a crash when deleting interrupts in multiplayer. Resolves https://github.com/pyanodon/pybugreports/issues/909
     - Fixed a crash when adding schedule to nuclear caravans. Resolves https://github.com/pyanodon/pybugreports/issues/924
+    - Fixed caravans not displaying alerts when out of food
+    - Updated food slot and food alert graphics
 ---------------------------------------------------------------------------------------------------
 Version: 3.0.41
 Date: 2025-3-7
